[package]
name = "episode-in-epub"
version = "0.1.0"
authors = ["cwouyang <cwouyang@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
epub-builder = "0.4.8"
fake-useragent = "0.1.3"
lazy_static = "1.4.0"
reqwest = { version = "0.11.3", features = ["json"] }
scraper = "0.12.0"
serde = "1.0.125"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
